Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-5966

Item pager should be able to evict active items even if checkpoint is not done yet

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 2.0
    • None
    • None
    • Security Level: Public
    • None

    Description

      In case of extremely high memory usage, replication stopped across cluster. Replica resident ratio eventually dropped to nearly 0% while active resident ratio still high because item pager unable to evict due to checkpoint manager check.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            liang Liang Guo (Inactive)
            liang Liang Guo (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty