MB-5966 Ignore checkpoint check for eviction if high memory usage

Change-Id: Icc37a77ceae35db70a1e2ed1acc754fcb8a096e6
Reviewed-on: http://review.couchbase.org/18638
Tested-by: Chiyoung Seo <chiyoung.seo@gmail.com>
Reviewed-by: Chiyoung Seo <chiyoung.seo@gmail.com>