item_pager.cc
@@ -63,10 +63,7 @@ public:
                 ++stats.numFailedEjects;
                 return;
             }
-            // Check if the key was already visited by all the cursors.
-            bool can_evict =
-                currentBucket->checkpointManager.eligibleForEviction(v->getKey());
-            if (can_evict && v->ejectValue(stats, currentBucket->ht)) {
+            if (v->ejectValue(stats, currentBucket->ht)) {
                 ++ejected;
             }
         }
